--- a/Blog_preview_card/style/estilo.css
+++ b/Blog_preview_card/style/estilo.css
@@ -1,7 +1,87 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap');
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Figtree", sans-serif;
+}
+
+:root{
+    --Yellow: hsl(47, 88%, 63%);
+    --Gray500: hsl(0, 0%, 42%);
+    --Gray950: hsl(0, 0%, 7%);
+}
+
+body{
+    width: 100vw;
+    height: 100vh;
+    background-color: var(--Yellow);
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.container_card{
+    width: 375px;
+    height: auto;
+    border-radius: 18px;
+    border: 1px solid black;
+    background-color: white;
+    padding: 20px;
+    box-shadow: 5px 5px 0 black;
+}
+
+.container_card .container_img img{
+    border-radius: 10px;
+}
+
+.container_card > a.btn{
+    display: inline-block;
+    background-color: var(--Yellow);
+    padding: 12px;
+    border-radius: 10px;
+    font-weight: bolder;
+    text-align: center;
+    text-decoration: none;
+    color: black;
+    margin-block: 15px;
+    transition: all .6s ease-in-out;
+}
+
+.container_card > a.btn:hover{
+    background-color: black;
+    color: white;
+}
+
+.container_card > h2{
+    margin-block: 15px;
+}
+
+.container_card p.descricao{
+    color: var(--Gray500);
+    line-height: 1.5;
+    margin-bottom: 10px;
+}
+
+.container_card .social{
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    gap: 8px;
+}
+
+.container_card .social a{
+    display: block;
+    text-decoration: none;
+    font-weight: bolder;
+    color: black;
+    transition: color .6s ease-in-out;
+}
+
+.container_card .social a:hover{
+    color: var(--Yellow);
 }
